// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`guide card snapshots should render use case card component for observability 1`] = `
<UseCaseCard
  description="Get end-to-end observability into your environments by consolidating your logs, metrics, and traces."
  footer={
    <EuiFlexGroup
      justifyContent="center"
    >
      <EuiFlexItem
        grow={false}
      >
        <EuiButton
          data-test-subj="onboarding--guideCard--view--observability"
          fill={true}
          onClick={[Function]}
        >
          View guide
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  }
  title="Monitor my environments"
  useCase="observability"
/>
`;

exports[`guide card snapshots should render use case card component for search 1`] = `
<UseCaseCard
  description="Create a finely-tuned search experience for your websites, applications, workplace content, and more."
  footer={
    <EuiFlexGroup
      justifyContent="center"
    >
      <EuiFlexItem
        grow={false}
      >
        <EuiButton
          data-test-subj="onboarding--guideCard--view--search"
          fill={true}
          onClick={[Function]}
        >
          View guide
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  }
  title="Search my data"
  useCase="search"
/>
`;

exports[`guide card snapshots should render use case card component for security 1`] = `
<UseCaseCard
  description="Protect your environment against threats by unifying SIEM, endpoint security, and cloud security in one place."
  footer={
    <EuiFlexGroup
      justifyContent="center"
    >
      <EuiFlexItem
        grow={false}
      >
        <EuiButton
          data-test-subj="onboarding--guideCard--view--security"
          fill={true}
          onClick={[Function]}
        >
          View guide
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  }
  title="Protect my environment"
  useCase="security"
/>
`;
